--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-	<h1>Design Thinking App Test</h1>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
+	<h2 class="page-title">Toolbox</h2>
 </body>
 </html>
