added jquery and transition to new tutorial page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h2 class="page-title">Toolbox</h2>
+	<div class="page" id="toolbox-page">
+		<h2 class="page-title">Toolbox</h2>
+		
+		<ul class="toolbox">
+			<a href="#"><li class="toolbox-tool" id="brainwriting">
+					<h4 class="toolbox-name">Brainwriting</h4>
+			</li></a>
+			<a href="#"><li class="toolbox-tool" id="mind-map">
+					<h4 class="toolbox-name">Mind Map</h4>
+			</li></a>
+		</ul>
+	</div>
+	
+	<div class="page" id="tut-page">
+		<h2 class="page-title">Mind Map</h2>
+	</div>
+	
+	<script src="js/jquery-1.11.2.min.js"></script>
+	<script src="js/toolbox.js"></script>
 </body>
 </html>
