override back button with cordova

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body onload="onLoad()">
 	<div class="page" id="toolbox-page">
 		<h2 class="page-title">Toolbox</h2>
 		
