gave content to tutorial

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 	
 	<div class="page" id="tut-page">
 		<h2 class="page-title">Mind Map</h2>
+		<div class="tut-img"></div>
+		<p style="padding:5px;">Habeo munere primis at eam, cum alienum torquatos ea. Cum noluisse rationibus te, an quot aliquip mea, vim ut munere noster persecuti. Est magna rebum verterem te, eu posse democritum consequuntur sea, iusto mnesarchum has ad.</p>
+		<p class="right-arrow">&#8680;</p>
 	</div>
 	
 	<script src="js/jquery-1.11.2.min.js"></script>
